--- a/index.html
+++ b/index.html
@@ -55,12 +55,18 @@
       <a href="visier-ui-library.html" class="project-component-4">
         <h3>Sport Heroes</h3>
         <p class="project-subtitle">Virtual Clubs</p>
+        <object data="images/arrow.svg" class="flecha" align="right"> </object>
+
         <a href="Benchmarking.html" class="project-component-2">
           <h3>United Heroes</h3>
           <p class="project-subtitle">Benchmarking:Onboarding</p>
+          <object data="images/arrow.svg" class="flecha" align="right"> </object>
+
       <a href="SGWEAR.html" class="project-component-1">
         <h3>SGWEAR</h3>
         <p class="project-subtitle">Web design</p>
+        <object data="images/arrow.svg" class="flecha" align="right"> </object>
+
       </a>
     </section>
 
