--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <a href="visier-ui-library.html" class="project-component-4">
         <h3>Sport Heroes</h3>
         <p class="project-subtitle">Virtual Clubs</p>
-        <object data="images/arrow.svg" class="flecha" align="right"> </object>
+        <button class="buttonbox" <a href="visier-ui-library.html"</a>View</button>
 
         <a href="Benchmarking.html" class="project-component-2">
           <h3>United Heroes</h3>
