--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
      <br>
 
     <section class="main-section">
-      <a href="visier-ui-library.html" class="project-component-4">
+      <a href="visier-ui-library.html" class="project-component-2">
         <h3>Sport Heroes</h3>
         <p class="project-subtitle">Virtual Clubs</p>
         <button class="buttonbox" <a href="visier-ui-library.html"</a>View</button>
@@ -60,12 +60,12 @@
         <a href="Benchmarking.html" class="project-component-2">
           <h3>United Heroes</h3>
           <p class="project-subtitle">Benchmarking:Onboarding</p>
-          <object data="images/arrow.svg" class="flecha" align="right"> </object>
+          <button class="buttonbox" <a href="visier-ui-library.html"</a>View</button>
 
-      <a href="SGWEAR.html" class="project-component-1">
+      <a href="SGWEAR.html" class="project-component-2">
         <h3>SGWEAR</h3>
         <p class="project-subtitle">Web design</p>
-        <object data="images/arrow.svg" class="flecha" align="right"> </object>
+        <button class="buttonbox" <a href="visier-ui-library.html"</a>View</button>
 
       </a>
     </section>
