--- a/Benchmarking.html
+++ b/Benchmarking.html
@@ -25,7 +25,7 @@
       </div>
 
       <div class="nav-left">
-      <a href="index.html" class="nav-item-white">Miguel Plaza</a>
+      <a href="index.html" class="nav-item-white"></a>
         </div>
     </nav>
 
