--- a/SGWEAR.html
+++ b/SGWEAR.html
@@ -25,7 +25,7 @@
       </div>
 
       <div class="nav-left">
-      <a href="index.html" class="nav-item-white">Miguel Plaza</a>
+      <a href="index.html" class="nav-item-white"></a>
         </div>
     </nav>
 
@@ -99,7 +99,7 @@ The next steps, still to be taken, are to improve certain aspects of the website
       <div class="footer-name">
         <div class="footer-name-title-black">
           <a href="https://www.linkedin.com/in/miguel-luis-152046163/"page">Miguel Plaza<br/>
-          </a>Portfolio 2021<br/>
+          </a>Portfolio 2022<br/>
           </div>
           <div class="footer-name-title second-black">Product Designer<br/>Visual Designer</div>
           <div class="footer-name-title second-black"><div class="footer-name-title-black">
