--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <nav class="header-nav">
       <div class="nav-right">
-        <a href="index.html" class="nav-item-2">Home</a>
+        <a href="index.html" class="nav-item-2"></a>
         <a href="about.html" class="nav-item">About</a>
       </div>
 
@@ -52,20 +52,20 @@
      <br>
 
     <section class="main-section">
-      <a href="visier-ui-library.html" class="project-component-2">
+      <a href="Virtual-Clubs.html" class="project-component-2">
         <h3>Sport Heroes</h3>
         <p class="project-subtitle">Virtual Clubs</p>
-        <button class="buttonbox" <a href="visier-ui-library.html"</a>View</button>
+        <button class="buttonbox" <a href="Virtual-Clubs.html"</a>View</button>
 
         <a href="Benchmarking.html" class="project-component-2">
           <h3>United Heroes</h3>
           <p class="project-subtitle">Benchmarking:Onboarding</p>
-          <button class="buttonbox" <a href="visier-ui-library.html"</a>View</button>
+          <button class="buttonbox" <a href="Benchmarking.html"</a>View</button>
 
       <a href="SGWEAR.html" class="project-component-2">
         <h3>SGWEAR</h3>
         <p class="project-subtitle">Web design</p>
-        <button class="buttonbox" <a href="visier-ui-library.html"</a>View</button>
+        <button class="buttonbox" <a href="SGWEAR.html"</a>View</button>
 
       </a>
     </section>
@@ -74,7 +74,7 @@
       <div class="footer-name">
         <div class="footer-name-title">
           <a href="https://www.linkedin.com/in/miguel-luis-152046163/"page">Miguel Plaza<br/>
-          </a>Portfolio 2021<br/>
+          </a>Portfolio 2022<br/>
           </div>
           <div class="footer-name-title second">Product Designer<br/>Visual Designer</div>
           <div class="footer-name-title second"><div class="footer-name-title-black">
