--- a/about.html
+++ b/about.html
@@ -35,5 +35,28 @@
       <a href="https://www.linkedin.com/in/miguel-luis-152046163/" class="about-link" target="_blank">LinkedIn</a>
     </section>
 
+    <section class="intro">
+        <h1 class="home-h2">Favourite Films</h1>
+
+    <div class="scrolling-wrapper">
+  <div><img src="images/Vertigomovie.jpg" class="posters"></div>
+  <div><img src="images/1.jpeg" class="posters"></div>
+  <div><img src="images/2.jpg" class="posters"></div>
+  <div><img src="images/3.jpg" class="posters"></div>
+  <div><img src="images/4.jpg" class="posters"></div>
+  <div><img src="images/5.jpg" class="posters"></div>
+  <div><img src="images/6.jpg" class="posters"></div>
+  <div><img src="images/7.jpg" class="posters"></div>
+  <div><img src="images/8.jpeg" class="posters"></div>
+  <div><img src="images/9.jpeg" class="posters"></div>
+  <div><img src="images/10.jpeg" class="posters"></div>
+  <div><img src="images/11.jpeg" class="posters"></div>
+  <div><img src="images/12.jpeg" class="posters"></div>
+  <div><img src="images/13.jpg" class="posters"></div>
+  <div><img src="images/14.jpeg" class="posters"></div>
+  <div><img src="images/15.jpeg" class="posters"></div>
+</div>
+</section>
+
   </body>
 </html>
