--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
     </section>
 
     <section class="intro">
-        <h1 class="home-h2">Favourite Films</h1>
+        <h1 class="home-h2">Favourite Films and series</h1>
 
     <div class="scrolling-wrapper">
   <div><img src="images/Vertigomovie.jpg" class="posters"></div>
