mejoras sgwear project

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <a href="Benchmarking.html" class="project-component-2">
           <h3>United Heroes</h3>
-          <p class="project-subtitle">Benchmarking:Onboarding</p>
+          <p class="project-subtitle">Benchmarking</p>
           <button class="buttonbox" <a href="Benchmarking.html"</a>View</button>
 
       <a href="SGWEAR.html" class="project-component-2">
