--- a/SGWEAR.html
+++ b/SGWEAR.html
@@ -36,11 +36,11 @@
 
       <img class="within-content-shadow" src="images/crewsarapng.png" alt=""/>
 
-      <p class="detail-intro">SGWEAR is a project born in 2016 by Sandra González and Melanie Plaza. A project that was born motivated by offering young people a different brand, with which they could feel identified and that defended some very important values for the new generations, such as caring for the planet or freedom of expression.
+      <p class="detail-intro">SGWEAR is a project born in 2016 by Sandra González and Melanie Plaza. A project that was born motivated by offering young people a different brand, with which they could feel identified. SGWEAR cares about the planet’s well-being and influences others to make sustainability-first buying decisions by offering a range of clothes made from recycled materials.
 <br><br>
-From the beginning, they have put a lot of effort into developing a brand image through communication actions focused on responsible consumption and the use of sustainable materials. They have collaborated with numerous influencers and participated in events such as the Animal Sound music festival and CREAMURCIA, where they were finalists.
+From the beginning, they have put a lot of effort into developing their branding. They have collaborated with numerous influencers and participated in events such as the Animal Sound music festival and CREAMURCIA, where they were finalists.
 <br><br>
-With the aim of boosting their online sales and their presence on the internet, they decided to develop a website that would showcase their values and offer a simple and comfortable sales experience for users.
+With the aim of boosting their online sales and their presence on the internet, they decided to develop a website that would showcase their main values and offer a simple and comfortable shopping experience for customers.
 <br><br>
 At the end of 2020, the development of what would become the new website for the SGWEAR brand began. </p>
 
@@ -59,12 +59,12 @@ At the end of 2020, the development of what would become the new website for the
       </div>
 
       <h2>problem</h2>
-      <p>SGWEAR's previous website had a number of problems ranging from a poor user experience to a lack of visual consistency. The website did not give users confidence and the level of sales made through it was very low. Therefore, the main objective was, on the one hand, to address these issues and, on the other hand, to make SGWEAR's website reflect the brand identity and provide a modern and trustworthy look and feel for the user. <br> <br>  It was also important to ensure that the page could be easily modified by someone without a lot of knowledge, as well as being able to add or remove products without much complication. </p>
+      <p>SGWEAR's previous website had a big number of problems ranging from a poor user experience to a lack of visual consistency. The website did not give customers enough confidence. The level of sales made through it was very low. Therefore, the main objective was, on the one hand, to address these issues and, on the other hand, to make SGWEAR's website reflect their brand identity and provide a modern and trustworthy look and feel for the user. <br> <br>  It was also important to ensure that the page could be easily modified by someone without a lot of knowledge, as well as being able to add or remove products without much difficulty. </p>
 
       <h2>design process</h2>
 
       <h3>research + exploration</h3>
-      <p>Together with the two founders of the brand, we will embark on a process of research and prototyping that will last around 2 months and from which the first version of the website will emerge. A website that will be in continuous iteration until we reach a satisfactory result. However, the project is not completely finished, we are still looking for ways to optimise and improve the user experience of the website.</p>
+      <p>Together with the two founders of the brand, we started a process of research and prototyping that will last around 2 months and from which the first version of the website will emerge. The website is in continuous iteration. We are still looking for ways to optimise and improve the user experience of the website.</p>
 
       <img class="within-content-shadow" src="images/sgwearprototypes.png" alt="prototyping"/>
 
@@ -85,11 +85,11 @@ The page you can see today is the result of multiple iterations during its first
 
 
       <h2>results</h2>
-      <p>The results obtained after continuous iterations have resulted in a website that achieved the objectives set at the beginning, i.e. that reflected the brand identity, that could be modified internally without much complexity and that offered a satisfactory user experience.   <br><br>
+      <p>After many iterations, we have achieved the objectives set at the beginning, i.e. that reflected the brand identity, that could be modified internally without much complexity and that offered a satisfactory user experience.   <br><br>
 
 In terms of economic results, thanks to the website, the brand achieved record sales, increasing them by more than 400%.   <br><br>
 
-The next steps, still to be taken, are to improve certain aspects of the website, such as the menu in the desktop version and the payment process for the mobile version, which, although it has already been improved to include the possibility of paying with Apple and Google Pay, still has room for improvement if we talk about the step in which the customer must enter their shipping details.
+The next steps, still to be taken, are to improve certain aspects of the website. For example, the menu in the desktop version or the payment process for the mobile version.
    <br><br> This was the first time I’ve ever built a website, and although it was a challenge, I’ve learned much about the design process, CSS and HTML, Wordpress, and how it could be a challenge to maintain and unify the whole website consistently, even if there is still room for improvement on this area.</p>
 
 
