--- a/about.html
+++ b/about.html
@@ -29,13 +29,13 @@
 
     <section class="intro">
       <h1 class="alternate-h1">Hi! <b style="color:#FFFFFF";> I'm Miguel,</b> a product designer from Murcia,Spain.Currently living in Madrid</h1>
-      <p class="about-paragraph">Apart from good usability and efficiency, I believe that effective user experience design develops by taking a step back to understand people’s subconscious needs; whether it be through in-person interviews, online research, or empathizing by putting myself in people’s shoes. Instead of putting the focus solely on existing technology, I aim to humanize the products and experiences I design and better integrate it into our daily lives. </p>
+      <p class="about-paragraph">Apart from good usability and efficiency, I believe that effective user experience design develops by taking a step back to understand people’s subconscious needs; whether it be through in-person interviews, online research, or empathizing by putting myself in people’s shoes. Instead of putting the focus solely on existing technology, I aim to humanize the products and experiences I design. </p>
 
       <a href="Docs/Miguel_Plaza_CV2022.pdf" class="about-link" target="_blank">Resume</a>
       <a href="https://www.linkedin.com/in/miguel-luis-152046163/" class="about-link" target="_blank">LinkedIn</a>
     </section>
 
-    <section class="intro">
+    <section class="intro3">
         <h1 class="home-h2">Favourite Films and series</h1>
 
     <div class="scrolling-wrapper">
@@ -55,6 +55,28 @@
   <div><img src="images/13.jpeg" class="posters"></div>
   <div><img src="images/14.jpeg" class="posters"></div>
   <div><img src="images/15.jpeg" class="posters"></div>
+</div>
+</section>
+
+<section class="intro3">
+    <h1 class="home-h2">Favourite Books</h1>
+
+<div class="scrolling-wrapper">
+<div><img src="images/30.jpeg" class="posters"></div>
+<div><img src="images/31.jpeg" class="posters"></div>
+<div><img src="images/32.jpeg" class="posters"></div>
+<div><img src="images/33.jpeg" class="posters"></div>
+<div><img src="images/34.jpeg" class="posters"></div>
+<div><img src="images/35.jpeg" class="posters"></div>
+<div><img src="images/36.jpeg" class="posters"></div>
+<div><img src="images/37.jpeg" class="posters"></div>
+<div><img src="images/38.jpeg" class="posters"></div>
+<div><img src="images/39.jpeg" class="posters"></div>
+<div><img src="images/40.jpeg" class="posters"></div>
+<div><img src="images/41.jpeg" class="posters"></div>
+<div><img src="images/42.jpeg" class="posters"></div>
+<div><img src="images/43.jpeg" class="posters"></div>
+<div><img src="images/44.jpeg" class="posters"></div>
 </div>
 </section>
 
