cambios sgwear texto

--- a/SGWEAR.html
+++ b/SGWEAR.html
@@ -36,9 +36,9 @@
 
       <img class="within-content-shadow" src="images/crewsarapng.png" alt=""/>
 
-      <p class="detail-intro">SGWEAR is a project born in 2016 by Sandra González and Melanie Plaza. A project that was born motivated by offering young people a different brand, with which they could feel identified. SGWEAR cares about the planet’s well-being and influences others to make sustainability-first buying decisions by offering a range of clothes made from recycled materials.
+      <p class="detail-intro">SGWEAR is a project born in 2016 by Sandra González and Melanie Plaza. A project that was born from the desire of to offer young people a different brand, with which they could feel identified. SGWEAR cares about the planet’s well-being and influences others to make sustainability-first buying decisions by offering a range of clothes made from recycled materials.
 <br><br>
-From the beginning, they have put a lot of effort into developing their branding. They have collaborated with numerous influencers and participated in events such as the Animal Sound music festival and CREAMURCIA, where they were finalists.
+From the beginning, they have put a lot of effort into developing their brand image. They have collaborated with numerous influencers and participated in events such as the Animal Sound Music Festival and CREAMURCIA, where they were finalists.
 <br><br>
 With the aim of boosting their online sales and their presence on the internet, they decided to develop a website that would showcase their main values and offer a simple and comfortable shopping experience for customers.
 <br><br>
@@ -69,11 +69,9 @@ At the end of 2020, the development of what would become the new website for the
       <img class="within-content-shadow" src="images/sgwearprototypes.png" alt="prototyping"/>
 
       <h3>execution</h3>
-      <p>Once the final structure of the page is defined, I proceed to start building the page in Wordpress with the help of the Elementor plugin. The page will be built from scratch, i.e. without any kind of template.
+      <p>Once the final structure of the page was defined, I proceed to start building the page in Wordpress with the help of the Elementor plugin. The page was built from scratch, i.e. without any kind of template.
 
-Despite using the Elementor plugin, it will be necessary, in some cases, the use of html and CSS code to achieve the desired results.
-
-The page you can see today is the result of multiple iterations during its first year of life.
+Despite using the Elementor plugin, it was necessary, in some cases, the use of html and CSS code to achieve the desired results.
 
 </p>
 
