--- a/SGWEAR.html
+++ b/SGWEAR.html
@@ -36,7 +36,7 @@
 
       <img class="within-content-shadow" src="images/crewsarapng.png" alt=""/>
 
-      <p class="detail-intro">SGWEAR is a project born in 2016 by Sandra González and Melanie Plaza. A project that was born from the desire of to offer young people a different brand, with which they could feel identified. SGWEAR cares about the planet’s well-being and influences others to make sustainability-first buying decisions by offering a range of clothes made from recycled materials.
+      <p class="detail-intro">SGWEAR is a project born in 2016 by Sandra González and Melanie Plaza. A project that was born from the desire to offer young people a different brand, with which they could feel identified. SGWEAR cares about the planet’s well-being and influences others to make sustainability-first buying decisions by offering a range of clothes made from recycled materials.
 <br><br>
 From the beginning, they have put a lot of effort into developing their brand image. They have collaborated with numerous influencers and participated in events such as the Animal Sound Music Festival and CREAMURCIA, where they were finalists.
 <br><br>
