--- a/SGWEAR.html
+++ b/SGWEAR.html
@@ -64,7 +64,8 @@ At the end of 2020, the development of what would become the new website for the
       <h2>design process</h2>
 
       <h3>research + exploration</h3>
-      <p>Together with the two founders of the brand, we started a process of research and prototyping that will last around 2 months and from which the first version of the website will emerge.
+      <p>Together with the two founders of the brand, we started a process of research and prototyping that will last around 2 months and from which the first version of the website will emerge. </p>
+
       <img class="within-content-shadow" src="images/sgwearprototypes.png" alt="prototyping"/>
 
       <h3>execution</h3>
