--- a/Virtual-Clubs.html
+++ b/Virtual-Clubs.html
@@ -54,7 +54,7 @@ This option allows companies to customise the application with a different logo,
 
 
       <h2>Customer and client understanding</h2>
-      <p>Before starting with the design tasks, my role as a designer is also to understand what the client wants and what they are looking for. This does not mean that the client gives me guidelines and I follow them, but that my task as a designer is to understand the client and translate their needs into design solutions.
+      <p>Before "get down to work", my role as a designer is also to understand what the client wants and what they are looking for. This does not mean that the client gives me guidelines and I follow them, but that my task as a designer is to understand the client and translate their needs into design solutions.
 <br><br>
 I have been involve in around 10 different Virtual Clubs. Some clients had a very clear idea about the final result they wanted to achieve. These clients provided me with all the necessary elements. However, there were also clients who did not know not what they wanted and needed support to explore the different possibilities.
 <br><br>
@@ -63,7 +63,7 @@ It was a team work in which many people were involve. Some people think that des
       <h2>Design process</h2>
 
       <h3>Client assets</h3>
-      <p>Before starting to design anything, one of the first things I did was to to review all the diffeent elements that the client has provided us with. As a general rule, we usually ask for the style/branding guide and the different elements we need, i.e. typography to be used, images, illustrations, etc.
+      <p>Before starting to design anything, I review all the different elements that the client has provided us with. As a general rule, we usually ask for the style/branding guide and the different elements we need, i.e. typography to be used, images, illustrations, etc.
 <br><br>
         <img class="within-content-shadow" src="images/brandguidelines.png" alt="image of UI component structure on Sketch"/>
 For this type of Virtual Clubs we have certain ''limitations'', i.e. within the app we use a limited number of colours, 2 different weights of typography, etc., we do not need an exhaustive knowledge of the brand elements, but some knowledge of them and the rules of use is required.
@@ -79,7 +79,7 @@ The prototype is customised with the client's colours and typography and other g
 <br><br>
 The prototype will also serve as a reference for the developers.
 <br><br>
-It is a process in which we also ask the client to give us his opinion in order to modify things and make the changes.
+It is a process in which we also ask clients to give us their opinion before deliver the final app.
 
 </p>
 
