--- a/Virtual-Clubs.html
+++ b/Virtual-Clubs.html
@@ -54,7 +54,7 @@ This option allows companies to customise the application with a different logo,
 
 
       <h2>Customer and client understanding</h2>
-      <p>Before "get down to work", my role as a designer is also to understand what the client wants and what they are looking for. This does not mean that the client gives me guidelines and I follow them, but that my task as a designer is to understand the client and translate their needs into design solutions.
+      <p>Before "get down to work", my role as a designer is also to understand what the client wants and what they are looking for. This does not mean that the client gives me guidelines and I follow them. My task as a designer is to understand the client and translate their needs into design solutions.
 <br><br>
 I have been involve in around 10 different Virtual Clubs. Some clients had a very clear idea about the final result they wanted to achieve. These clients provided me with all the necessary elements. However, there were also clients who did not know not what they wanted and needed support to explore the different possibilities.
 <br><br>
