--- a/Virtual-Clubs.html
+++ b/Virtual-Clubs.html
@@ -68,7 +68,7 @@ It was a team work in which many people were involve. Some people think that des
         <img class="within-content-shadow" src="images/brandguidelines.png" alt="image of UI component structure on Sketch"/>
 For this type of Virtual Clubs we have certain ''limitations'', i.e. within the app we use a limited number of colours, 2 different weights of typography, etc., we do not need an exhaustive knowledge of the brand elements, but some knowledge of them and the rules of use is required.
 <br><br>
-Something that I also do is to review the presence of the brand on the internet, that is, its website, its social networks, etc., this allows me to better understand the brand and how the brand communicates with its customers. This process is of great help to me during the subsequent prototyping process, especially if I need to design some visual elements for the client.
+I review as well the presence of the brand on the internet, that is, its website, its social networks, etc., this allows me to better understand the brand and how the brand communicates with its customers. This process is of great help to me during the subsequent prototyping process, especially if I need to design some visual elements for the client.
 <br><br>
 Once I have compiled all the elements I need, I review and study them. I group them in one place and I start with the next stage of the design process. </p>
 
