--- a/Virtual-Clubs.html
+++ b/Virtual-Clubs.html
@@ -90,7 +90,7 @@ It is a process in which we also ask clients to give us their opinion before del
 <br><br>
 <img class="within-content-shadow" src="images/storescreens.png" alt="image of UI component structure on Sketch"/>
 <img class="within-content-shadow" src="images/iconsapps.png" alt="image of UI component structure on Sketch"/>
-Also, although not directly related to the development of the app, I was in charge of designing a landing page to promote the new app. The landing pages were made using Webflow and usually had a similar look and feel adjusted to the client's visual identity.
+I was also in charge of designing a landing page to promote the new app. The landing pages were made using Webflow and usually had a similar look and feel adjusted to the client's visual identity.
 <br><br>
 <img class="within-content" src="images/landingpages2.gif" alt="image of UI component structure on Sketch"/>
 </p>
