--- a/SGWEAR.html
+++ b/SGWEAR.html
@@ -101,7 +101,7 @@ The next steps, still to be taken, are to improve certain aspects of the website
           </div>
           <div class="footer-name-title second-black">Product Designer<br/>Visual Designer</div>
           <div class="footer-name-title second-black"><div class="footer-name-title-black">
-            <a href="Docs/Miguel_Plaza_CV2022.pdf"page">CV
+            <a href="https://read.cv/miguellpp"page">CV
             </a>
             </div>
             <div class="footer-name-title">
