--- a/Virtual-Clubs.html
+++ b/Virtual-Clubs.html
@@ -115,7 +115,7 @@ It was also a very good Figma training. Working with Figma everyday helped me to
           </div>
           <div class="footer-name-title second-black">Product Designer<br/>Visual Designer</div>
           <div class="footer-name-title second-black"><div class="footer-name-title-black">
-            <a href="Docs/Miguel_Plaza_CV2022.pdf"page">CV
+            <a href="https://read.cv/miguellpp"page">CV
             </a>
             </div>
             <div class="footer-name-title">
