--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </div>
           <div class="footer-name-title second">Product Designer<br/>Visual Designer</div>
           <div class="footer-name-title second"><div class="footer-name-title-black">
-            <a href="Docs/Miguel_Plaza_CV2022.pdf"page">CV
+            <a href="https://read.cv/miguellpp"page">CV
             </a>
             </div>
             <div class="footer-name-title">
