--- a/Benchmarking.html
+++ b/Benchmarking.html
@@ -59,7 +59,7 @@
           </div>
           <div class="footer-name-title second-black">Product Designer<br/>Visual Designer</div>
           <div class="footer-name-title second-black"><div class="footer-name-title-black">
-            <a href="Docs/Miguel_Plaza_CV2022.pdf"page">CV
+            <a href="https://read.cv/miguellpp"page">CV
             </a>
             </div>
             <div class="footer-name-title">
