--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
       <h1 class="alternate-h1">Hi! <b style="color:#FFFFFF";> I'm Miguel,</b> a product designer from Murcia,Spain.Currently living in Madrid</h1>
       <p class="about-paragraph">Apart from good usability and efficiency, I believe that effective user experience design develops by taking a step back to understand people’s subconscious needs; whether it be through in-person interviews, online research, or empathizing by putting myself in people’s shoes. Instead of putting the focus solely on existing technology, I aim to humanize the products and experiences I design. </p>
 
-      <a href="Docs/Miguel_Plaza_CV2022.pdf" class="about-link" target="_blank">Resume</a>
+      <a href="https://read.cv/miguellpp" class="about-link" target="_blank">Resume</a>
       <a href="https://www.linkedin.com/in/miguel-luis-152046163/" class="about-link" target="_blank">LinkedIn</a>
     </section>
 
