CO2 PAGE and some modf

--- a/SGWEAR.html
+++ b/SGWEAR.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Miguel Plaza - Visier UI Library</title>
+    <title>Miguel Plaza - SGWEAR</title>
 
     <link href="css/main.css" rel="stylesheet">
     <link href="css/flexbox.css" rel="stylesheet">
@@ -29,7 +29,7 @@
         </div>
     </nav>
 
-    <img class="full-bleed" src="images/library-splash.png" alt="image of Visier Sketch UI library on a Macbook Pro"/>
+    <img class="full-bleed" src="images/library-splash.png" alt=""/>
 
     <section class="main-content">
       <h1 class="project-title">SGWEAR WEBSITE</h1>
