--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
           <p class="project-subtitle">Benchmarking</p>
           <button class="buttonbox" <a href="Benchmarking.html"</a>View</button>
 
+            <a href="CO2.html" class="project-component-2">
+              <h3>United Heroes</h3>
+              <p class="project-subtitle">CO2 component</p>
+              <button class="buttonbox" <a href="CO2.html"</a>View</button>
+
       <a href="SGWEAR.html" class="project-component-2">
         <h3>SGWEAR</h3>
         <p class="project-subtitle">Web design</p>
