--- a/Benchmarking.html
+++ b/Benchmarking.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Miguel Plaza - Visier UI Library</title>
+    <title>Miguel Plaza - Benchmarking</title>
 
     <link href="css/main.css" rel="stylesheet">
     <link href="css/flexbox.css" rel="stylesheet">
