--- a/CO2.html
+++ b/CO2.html
@@ -68,7 +68,7 @@ The evolution should be calculated compared to D-7 (at the same time)
 
       <h2>Research and design exploration</h2>
       <p>
-The process of developing this new feature was a little bit different from the rest of the features in which I have been involved. In this case, a lot of clients were asking to us the possibility to add a way to measure the CO2 that users were saved by active transport (walking, cycling, etc.). We also had a hypothesis in mind: the development of this new feature will motivates users to come back to track the amount of CO2 they have saved.
+The process of developing this new feature was a little bit different from the rest of the features in which I have been involved. In this case, a lot of clients were asking to us the possibility to add a way to measure the CO2 that users were saved by active transport (walking, cycling, etc.). We also had a hypothesis in mind: the development of this new feature will motivate users to come back and track the amount of CO2 they have saved.
  <br> <br>
 Since it was something we could develop quickly and we had some pressure from clients, we decided to start with an “experiment”. We decided not to do any user research, 0 tests were carried out.
  <br> <br>
