--- a/Benchmarking.html
+++ b/Benchmarking.html
@@ -10,8 +10,8 @@
     <link href="css/main.css" rel="stylesheet">
     <link href="css/flexbox.css" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata:300,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=consolata:400,700" rel="stylesheet">
 
   </head>
 
