--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
     <link href="https://fonts.googleapis.com/css?family=Inconsolata:300,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=consolata:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kulim,Park" rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css?family=KulimPark" rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css?family=Kulim Park" rel='stylesheet'>
 
   </head>
 
