--- a/SGWEAR.html
+++ b/SGWEAR.html
@@ -12,9 +12,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Inconsolata:300,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=consolata:400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Kulim,Park" rel='stylesheet'>
-    <link href="https://fonts.googleapis.com/css?family=KulimPark" rel='stylesheet'>
-    <link href="https://fonts.googleapis.com/css?family=Kulim Park" rel='stylesheet'>
+    <link href="https://github.com/noponies/Kulim-Park/raw/master/fonts/otf/KulimPark-Regular.otf" rel='stylesheet'>
 
   </head>
 
