--- a/CO2.html
+++ b/CO2.html
@@ -50,15 +50,15 @@
 
       <h2>What do we want to do?</h2>
       <p>
-      Add a card with the amount of CO2 saved during the week and the evolution compared to last week
+      <del>Add a card with the amount of CO2 saved during the week and the evolution compared to last week</del> We will only show the amount of CO2 saved in the dashbord, but we will allow the user to click on it if he wants to know more about it.
          </p>
 
          <h3>How is it calculated?</h3>
-         <p>KM walking & cycling * 97g (Average emissions of cars sold in 2020, source Ademe)
+         <p>KM walking & cycling * 114.7g (average CO2 emissions (114.7gCO2/km) of new vehicles sold in Europe in 2020 (source : European Environment Agency)).
   <br> <br>
-Every monday at 00:00 am the counter should be back to 0
+<del>Every monday at 00:00 am the counter should be back to 0</del> In the new version we changed it. We will calculate taking into account the whole month.
   <br> <br>
-The evolution should be calculated compared to D-7 (at the same time)
+<del> The evolution should be calculated compared to D-7 (at the same time) </del> We removed the comparative in the new version.
 
             </p>
 
