--- a/CO2.html
+++ b/CO2.html
@@ -48,17 +48,20 @@
         </ul>
       </div>
 
+      <img class="within-content" src="images/CO2/FINALVERSIONFEATURE.png" alt="FINALVERSIONFEATURE.png"/>
+
+
       <h2>What do we want to do?</h2>
       <p>
-      <del>Add a card with the amount of CO2 saved during the week and the evolution compared to last week</del> We will only show the amount of CO2 saved in the dashbord, but we will allow the user to click on it if he wants to know more about it.
+      <del>Add a card with the amount of CO2 saved during the week and the evolution compared to last week</del> <b><FONT COLOR="#ff0000"> UPDATE </FONT></b> We want to inform users about the CO2 impact they have in the way they move; for this, we will only show the amount of CO2 saved in the dashbord, but we will allow the user to click on it if he wants to know more about it (km covered, details, etc).
          </p>
 
          <h3>How is it calculated?</h3>
          <p>KM walking & cycling * 114.7g (average CO2 emissions (114.7gCO2/km) of new vehicles sold in Europe in 2020 (source : European Environment Agency)).
   <br> <br>
-<del>Every monday at 00:00 am the counter should be back to 0</del> In the new version we changed it. We will calculate taking into account the whole month.
+<del>Every monday at 00:00 am the counter should be back to 0</del> <b><FONT COLOR="#ff0000"> UPDATE </FONT></b> In the new version we changed it. We will calculate taking into account the whole month.
   <br> <br>
-<del> The evolution should be calculated compared to D-7 (at the same time) </del> We removed the comparative in the new version.
+<del> The evolution should be calculated compared to D-7 (at the same time)</del> &nbsp <b><FONT COLOR="#ff0000"> UPDATE </FONT></b> We removed the comparative in the new version.
 
             </p>
 
@@ -88,6 +91,46 @@ This call to action will allow us to measure the interest of users about this fe
       <p>
       </p>
 
+
+      <h2>Iteration</h2>
+       <br> <br>
+       <h3>What we found</h3>
+      <p>
+        After testing our first design, we found out multiple things that helped us to improve the current design.
+         <br> <br>
+         We found out that the users didn't understand the origin of the CO2 saved quantity. It helped us to define the new dashboard component. We decided to remove the comparative by week. We also changed the period of time we took into account to calculate the amount of CO2 saved; we changed it from weekly to monthly. Finally, we included a little setence to help the users understand from where this quanity comes from: "Thanks to your walking and biking trips".
+   <br> <br>
+   Below you can see some tests we did before the final design. We wanted to explore different options and formats.
+   <br> <br>
+  <img class="within-content" src="images/CO2/alternativesdashboard.png" alt="prototyping"/>
+  <img class="within-content" src="images/CO2/alternatives2.png" alt="prototyping"/>
+  However, we decided to keep it simple and we did not change much the original design. Here you can see the final version of the dashboard component:
+   <br> <br>
+  <img class="within-content" src="images/CO2/finaldashboard.png" alt="prototyping"/>
+  </p>
+ <h3>What we added</h3>
+ <p>
+Our original idea was to allow users to access to a page in which they will be able to check different information related to their CO2 impact.
+  <br> <br>
+  In this first iteration, we added a dedicated page in which users are able to see the amount of kilometers they did by walking or cycling and the total amount of CO2 saved thanks to these trajects. To access to this report, users need to click on the dashboard CO2 component.
+  <br> <br>
+  As we intended to raise awareness about the impact that we have on the planet; we wanted to provide useful information about the topic. We added some comparatives that, we think, will help users to better understand what their amount of CO2 saved means. By clicking in each card, users have access to some useful information.
+  <br> <br>
+Below you can see a final version of this feature:
+<br> <br>
+<img class="within-content" src="images/CO2/FINALVERSION3.png" alt="FINALVERSIONFEATURE.png"/>
+Here some designs we tried before the final version:
+<br> <br>
+<img class="within-content" src="images/CO2/testco2report.png" alt="testco2report.png"/>
+</p>
+
+
+<h2>Learnings</h2>
+<p>
+During the process of designing this feature I have learned a lot of things. Since it is a complex topic, I had to do a lot of research. It wasn't easy to deliver a final version in which users are able to understand and that is able to offer some "extra value" to them.
+<br> <br>
+I'm happy with the final results and I think that we were able to deliver a feature that works and helps users to be more conscious about their CO2 impact on the planet.
+</p>
 </section>
 
     <div class="footer">
