--- a/CO2.html
+++ b/CO2.html
@@ -118,7 +118,8 @@ Our original idea was to allow users to access to a page in which they will be a
   <br> <br>
 Below you can see a final version of this feature:
 <br> <br>
-<img class="within-content" src="images/CO2/FINALVERSION3.png" alt="FINALVERSIONFEATURE.png"/>
+<img class="within-content" src="images/CO2/finalversionthreescreens.png" alt="FINALVERSIONFEATUR.png"/>
+
 Here some designs we tried before the final version:
 <br> <br>
 <img class="within-content" src="images/CO2/testco2report.png" alt="testco2report.png"/>
