--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             <a href="CO2.html" class="project-component-2">
               <h3>United Heroes</h3>
-              <p class="project-subtitle">CO2 component</p>
+              <p class="project-subtitle">CO2 component (UPDATED)</p>
               <button class="buttonbox" <a href="CO2.html"</a>View</button>
 
       <a href="SGWEAR.html" class="project-component-2">
@@ -79,7 +79,7 @@
       <div class="footer-name">
         <div class="footer-name-title">
           <a href="https://www.linkedin.com/in/miguel-luis-152046163/"page">Miguel Plaza<br/>
-          </a>Portfolio 2022<br/>
+          </a>Portfolio 2023<br/>
           </div>
           <div class="footer-name-title second">Product Designer<br/>Visual Designer</div>
           <div class="footer-name-title second"><div class="footer-name-title-black">
