--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             <a href="CO2.html" class="project-component-2">
               <h3>United Heroes</h3>
-              <p class="project-subtitle">CO2 component (UPDATED)</p>
+              <p class="project-subtitle">CO2 feature (UPDATED)</p>
               <button class="buttonbox" <a href="CO2.html"</a>View</button>
 
       <a href="SGWEAR.html" class="project-component-2">
