--- a/index.html
+++ b/index.html
@@ -53,24 +53,34 @@
 
     <section class="main-section">
       <a href="Virtual-Clubs.html" class="project-component-2">
-        <h3>Sport Heroes</h3>
-        <p class="project-subtitle">Virtual Clubs</p>
+        <h3>Virtual Clubs</h3>
+        <p class="project-subtitle">Sport Heroes</p>
+          <img class="logo-index" src="images/logos/logoSH.png" alt="logoSH.png"/>
         <button class="buttonbox" <a href="Virtual-Clubs.html"</a>View</button>
 
         <a href="Benchmarking.html" class="project-component-2">
-          <h3>United Heroes</h3>
-          <p class="project-subtitle">Benchmarking</p>
+          <h3>Benchmarking</h3>
+          <p class="project-subtitle">United Heroes</p>
+          <img class="logo-index" src="images/logos/uh.png" alt="logoSH.png"/>
           <button class="buttonbox" <a href="Benchmarking.html"</a>View</button>
 
             <a href="CO2.html" class="project-component-2">
-              <h3>United Heroes</h3>
-              <p class="project-subtitle">CO2 feature (UPDATED)</p>
+              <h3>CO2 feature (UPDATED)</h3>
+              <p class="project-subtitle">United Heroes</p>
+                <img class="logo-index" src="images/logos/uh.png" alt="logoSH.png"/>
               <button class="buttonbox" <a href="CO2.html"</a>View</button>
 
       <a href="SGWEAR.html" class="project-component-2">
-        <h3>SGWEAR</h3>
-        <p class="project-subtitle">Web design</p>
+        <h3>Web design</h3>
+        <p class="project-subtitle">SGWEAR</p>
+        <img class="logo-index2" src="images/logos/sgwear.png" alt="logosgwear.png"/>
         <button class="buttonbox" <a href="SGWEAR.html"</a>View</button>
+
+          <a href="events.html" class="project-component-2">
+            <h3>Events feature</h3>
+            <p class="project-subtitle">United Heroes</p>
+            <img class="logo-index" src="images/logos/uh.png" alt="logoSH.png"/>
+            <button class="buttonbox" <a href="SGWEAR.html"</a>View</button>
 
       </a>
     </section>
