--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <img class="logo-index2" src="images/logos/sgwear.png" alt="logosgwear.png"/>
         <button class="buttonbox" <a href="SGWEAR.html"</a>View</button>
 
-          <a href="events.html" class="project-component-2">
+          <a href="Events.html" class="project-component-2">
             <h3>Events feature</h3>
             <p class="project-subtitle">United Heroes</p>
             <img class="logo-index" src="images/logos/uh.png" alt="logoSH.png"/>
