--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <a href="SGWEAR.html" class="project-component-2">
         <h3>Web design</h3>
         <p class="project-subtitle">SGWEAR</p>
-        <img class="logo-index2" src="images/logos/sgwear.png" alt="logosgwear.png"/>
+        <img class="logo-index2" src="images/sgwear.png" alt="logosgwear.png"/>
         <button class="buttonbox" <a href="SGWEAR.html"</a>View</button>
 
           <a href="Events.html" class="project-component-2">
