--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
       <a href="Virtual-Clubs.html" class="project-component-2">
         <h3>Virtual Clubs</h3>
         <p class="project-subtitle">Sport Heroes</p>
-          <img class="logo-index" src="images/logos/logoSH.png" alt="logoSH.png"/>
+          <img class="logo-index" src="images/logoSH.png" alt="logoSH.png"/>
         <button class="buttonbox" <a href="Virtual-Clubs.html"</a>View</button>
 
         <a href="Benchmarking.html" class="project-component-2">
           <h3>Benchmarking</h3>
           <p class="project-subtitle">United Heroes</p>
-          <img class="logo-index" src="images/logos/uh.png" alt="logoSH.png"/>
+          <img class="logo-index" src="images/uh.png" alt="logoSH.png"/>
           <button class="buttonbox" <a href="Benchmarking.html"</a>View</button>
 
             <a href="CO2.html" class="project-component-2">
               <h3>CO2 feature (UPDATED)</h3>
               <p class="project-subtitle">United Heroes</p>
-                <img class="logo-index" src="images/logos/uh.png" alt="logoSH.png"/>
+                <img class="logo-index" src="images/uh.png" alt="logoSH.png"/>
               <button class="buttonbox" <a href="CO2.html"</a>View</button>
 
       <a href="SGWEAR.html" class="project-component-2">
@@ -79,7 +79,7 @@
           <a href="Events.html" class="project-component-2">
             <h3>Events feature</h3>
             <p class="project-subtitle">United Heroes</p>
-            <img class="logo-index" src="images/logos/uh.png" alt="logoSH.png"/>
+            <img class="logo-index" src="images/uh.png" alt="logoSH.png"/>
             <button class="buttonbox" <a href="SGWEAR.html"</a>View</button>
 
       </a>
