--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <button class="buttonbox" <a href="Benchmarking.html"</a>View</button>
 
             <a href="CO2.html" class="project-component-2">
-              <h3>CO2 feature (UPDATED)</h3>
+              <h3>CO2 feature</h3>
               <p class="project-subtitle">United Heroes</p>
                 <img class="logo-index" src="images/uh.png" alt="logoSH.png"/>
               <button class="buttonbox" <a href="CO2.html"</a>View</button>
