--- a/Events.html
+++ b/Events.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Miguel Plaza - CO2</title>
+    <title>Miguel Plaza - events</title>
 
     <link href="css/main.css" rel="stylesheet">
     <link href="css/flexbox.css" rel="stylesheet">
@@ -35,7 +35,10 @@
         <img class="within-content-shadow" src="images/gifs/eventsgif.gif" alt=""/>
       <p class="detail-intro">As a product designer at United Heroes, I was tasked with developing a feature that could increase user engagement on the app. After conducting research, we identified a lack of engagement among our current user base and decided to address it by bringing physical wellness events and webinars into the app. Our goal was to make it easy for users to sign up and participate in these events while staying within the United Heroes ecosystem.
   <br> <br>
-To accomplish this, we collaborated closely with Train Me, an event-organizing platform, to integrate their platform into our app. Working alongside a product manager and two front-end developers, I led the design direction for the new Events feature.
+
+To accomplish this, we collaborated closely with Train Me, an event-organizing platform, to integrate their platform into our app. Working together with TrainMe made the development of our event feature much faster and easier. We can use TrainMe's existing platform, where they already organize events, to extract data that can be displayed in our app. This way, we won't need to start from scratch and spend a lot of time building an event management system from scratch. Instead, we can utilize TrainMe's expertise in events management and focus on developing other important parts of our feature such as an easy-to-use interface that our users will love. In a nutshell, partnering with TrainMe will save us time and help us deliver a fantastic events feature in record time!
+
+Working alongside a product manager and two front-end developers, I led the design direction for the new Events feature.
        </p>
 
       <div class="sub-content-group">
@@ -64,12 +67,20 @@ To accomplish this, we collaborated closely with Train Me, an event-organizing p
 
       <h2>Research and design exploration</h2>
       <p>
-Our design process involved creating wireframes, user flows, and prototypes that explored different ways to present these categories and events. We also identified key features that would make it easy for users to navigate and sign up for events. Once we had a design direction, we conducted user testing sessions with 5 participants to identify areas where we could further improve the feature.
+Our design process involved creating wireframes, user flows, and prototypes that explored different ways to present these categories and events. We also identified key features that would make it easy for users to navigate and sign up for events.
+<br> <br>
+To better understand how users expect to find different elements within the events feature, we conducted a card-sorting exercise. This involved organizing various elements of the event management process into categories, then asking users to sort them into groups. By analyzing the results of the card sorting, we gained valuable insight into the mental models and expectations of our users, allowing us to better organize and present event-related information within the app.
+<br> <br>
+ Once we had a design direction, we conducted user testing sessions with 5 participants to identify areas where we could further improve the feature.
          </p>
+         <img class="within-content" src="images/Mockupsevents/userflow.png" class="misc"/>
+
 
       <h2>Design</h2>
-
-       <br> <br>
+   So now, we're ready to start designing the feature! We took into account all that feedback and insights seriously. We had to consider the various features that would be required, like allowing users to set up reminders for upcoming events and displaying event details like date, time, location, and guest RSVPs.
+   <br> <br>
+      Throughout the design process, we remained focused on creating a clear and intuitive user experience, allowing our users to easily navigate the different flows and accomplish their goals quickly and efficiently.
+      <br> <br>
 
 
       <h3>Example of a component</h3>
@@ -92,6 +103,9 @@ Our design process involved creating wireframes, user flows, and prototypes that
 <h2>Future plans</h2>
 <p>
 Our next step is to monitor usage and gather feedback from our user base. Based on this feedback, we plan to optimize the feature further and add new features to enhance user engagement. In the long term, we plan to organize our own events within the United Heroes platform, bringing a unique and personalized wellness experience to our users. The Events feature is an exciting new chapter in United Heroes' journey, and I'm proud to have led the product design effort with such a talented team.</p>
+<img class="within-content" src="images/Mockupsevents/iteration.png" class="component"/>
+
+
 </section>
 
     <div class="footer">
