--- a/index.html
+++ b/index.html
@@ -70,17 +70,23 @@
                 <img class="logo-index" src="images/uh.png" alt="logoSH.png"/>
               <button class="buttonbox" <a href="CO2.html"</a>View</button>
 
+                <a href="Events.html" class="project-component-2">
+                  <h3>Events feature</h3>
+                  <p class="project-subtitle">United Heroes</p>
+                  <img class="logo-index" src="images/uh.png" alt="logoSH.png"/>
+                  <button class="buttonbox" <a href="SGWEAR.html"</a>View</button>
+
       <a href="SGWEAR.html" class="project-component-2">
         <h3>Web design</h3>
         <p class="project-subtitle">SGWEAR</p>
         <img class="logo-index2" src="images/sgwear.png" alt="logosgwear.png"/>
         <button class="buttonbox" <a href="SGWEAR.html"</a>View</button>
 
-          <a href="Events.html" class="project-component-2">
-            <h3>Events feature</h3>
-            <p class="project-subtitle">United Heroes</p>
-            <img class="logo-index" src="images/uh.png" alt="logoSH.png"/>
-            <button class="buttonbox" <a href="SGWEAR.html"</a>View</button>
+              <a href="chaos.html" class="project-component-2">
+                <h3>Web design</h3>
+                <p class="project-subtitle">CHAOS</p>
+                <img class="logo-index2" src="images/chaoslogo.png" alt="chaos"/>
+                <button class="buttonbox" <a href="SGWEAR.html"</a>View</button>
 
       </a>
     </section>
