--- a/chaos.html
+++ b/chaos.html
@@ -33,15 +33,6 @@
 
       <h1 class="project-title">CHAOS website</h1>
       <img class="within-content-shadow" src="images/chaos.jpg" alt=""/>
-
-      <p class="detail-intro">Hey there! So, I was the one who created my client's new website. As a one-person team, I had to work extra hard to make sure that the digital experience perfectly captured the brand's identity while being user-friendly. And you know what? I did it all on my first go using Framer, which was pretty exciting!
-<br><br>
-Now, I'm not gonna lie, it was a little intimidating to use Framer for the very first time. But with a little bit of practice and patience, I was able to pick it up and create a visually appealing interface with a smooth user experience. I created the website's wireframes and layout using my design skills, making sure that every element was consistent with the brand's message and values.
-<br><br>
-Of course, since this was my first time using Framer, there's always room for improvement. My plan is to continually make improvements to the website over the next several months by gathering user feedback and data. Working hand in hand with my client, we'll be refining the website's functionality, improving its visual aesthetics, and making sure that it continues to meet their specific needs.
-<br><br>
-Overall, considering that it was my first time using Framer, I'm pretty stoked with how the website turned out. It does an excellent job of presenting the brand's identity, communicating their message, and meeting their needs. And I'm looking forward to continuing to work on this project to create an even better version of their website in the future.</p>
-
       <div class="sub-content-group">
         <ul class="sub-content-item">
           <li><em>Roles:</em> Research, Visual Design, web design, web development</li>
@@ -50,7 +41,20 @@ Overall, considering that it was my first time using Framer, I'm pretty stoked w
           <li><em>Team:</em> Miguel Plaza, Melanie Plaza, Sandra González</li>
           <li><em>Link to the project:</em>   <a href="https://chaosdepartment.es/"page">CHAOS website
             </a></li>
-        </ul>
+          </ul>
+
+
+
+   <p class="detail-intro">   <br><br> Hey there! So, I was the one who created my client's new website. As a one-person team, I had to work extra hard to make sure that the digital experience perfectly captured the brand's identity while being user-friendly. And you know what? I did it all on my first go using Framer, which was pretty exciting!
+<br><br>
+Now, I'm not gonna lie, it was a little intimidating to use Framer for the very first time. But with a little bit of practice and patience, I was able to pick it up and create a visually appealing interface with a smooth user experience. I created the website's wireframes and layout using my design skills, making sure that every element was consistent with the brand's message and values.
+<br><br>
+Of course, since this was my first time using Framer, there's always room for improvement. My plan is to continually make improvements to the website over the next several months by gathering user feedback and data. Working hand in hand with my client, we'll be refining the website's functionality, improving its visual aesthetics, and making sure that it continues to meet their specific needs.
+<br><br>
+Overall, considering that it was my first time using Framer, I'm pretty stoked with how the website turned out. It does an excellent job of presenting the brand's identity, communicating their message, and meeting their needs. And I'm looking forward to continuing to work on this project to create an even better version of their website in the future.</p>
+
+
+
 
       </div>
 
